<resources>
    <string name="app_name">cavegame</string>

    <string name="title1">Gamer Beware…\nYou\'re in for the \t\t\tGaming Scare…</string>

    <string name="title2">enter at own gaming risk</string>
    <string name="button1">titlebutton</string>
    <string name="dungeongreets">You are in a dungeon, the rich smell of mildew emanates from the Dungeon walls, what will you do? \n\n\t[Please Press The Buttons to Proceed]</string>



<!--    I am the cave activity -->
    <string name="torchText">Torches Get: </string>
    <string name="caveButton1">Grab Torch</string>
    <string name="caveButton2">Eat Torch \n[Die Instantly]</string>
    <string name="caveButton3">Listen for Groblin(s) \n[Die Instantly]</string>
    <string name="caveButton4">Proceed Towards the Light </string>
    <string name="counter">$counter</string>
    <string name="torchGotten">The torch creeks as it is removed from the wall, and a scooby-doo contraption swings you in a circle to the other side of the wall. Before you is stands a man the same height as you, you also have the same birthday. You speak to him and he yawns his truth to you as this: </string>
    <string name="wizardSpeaks">Hello there traveler… Congratulations on making it this far. I can train your in one of four skills.. but choose wisely for I can only teach you one skill, and then I will bid you farewell and take a nap. </string>
    <string name="wizImg">A Wizard Stands before you</string>
    <string name="caveImg">You are in a dark cave…</string>

    <string name="wizButton1">Torch Mancy</string>
    <string name="wizButton2">Eat Old Man [Cannibalism Skill: LOCKED - \nDie Instantly]</string>
    <string name="wizButton3">Watermancy [Forbidden Knowledge, \nDie Instantly]</string>
    <string name="wizButton4">Leave this man at once…</string>

    <string name="plantIntro">Before you stands a large green plant beast. The combat begins!</string>
    <string name="plantText">plantText!</string>
    <string name="winText">Congratulations! You beat the boss, as your reward you have earned the crown. Press the winning cup to marvel in your greatness…</string>


</resources>
