<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable name="torchHaver" type="android.widget.Button"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/caveColor"
        android:orientation="vertical"

        tools:context=".CaveActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="409dp"
                android:layout_height="264dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="451dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/dankcave" />

            <TextView
                android:id="@+id/dungeontext"
                android:layout_width="329dp"
                android:layout_height="125dp"
                android:layout_marginStart="40dp"

                android:layout_marginTop="316dp"
                android:text="@string/dungeongreets"
                android:textIsSelectable="false"

                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button1"
                android:layout_width="169dp"
                android:layout_height="97dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="452dp"
                android:text="@string/caveButton1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="169dp"
                android:layout_height="97dp"
                android:layout_marginStart="214dp"
                android:layout_marginTop="452dp"
                android:text="@string/caveButton2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button3"
                android:layout_width="169dp"
                android:layout_height="97dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="566dp"
                android:text="@string/caveButton3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button4"
                android:layout_width="169dp"
                android:layout_height="97dp"
                android:layout_marginStart="214dp"
                android:layout_marginTop="566dp"
                android:text="@string/caveButton4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>

